# testlang-rust

./: .gitignore  Cargo.toml  README.md
rules/: main-old.rule  main.rule  main.rule.json  test.rule
sources/: test.tl
src/: codegen_old.rs  lexer.rs  main.rs  parser.rs
src/codegen/: ast.rs  astElem.rs  astElemStmtIf.rs  astElemStmtScope.rs  astType.rs  gen.rs  generator.rs  generatorv2.rs  generatorv3.rs  mod.rs  op.rs  type_inference.rs  typed_ir.rs  untyped_ir.rs  value.rs
src/rule/: lexer.rs  mod.rs  parser.rs
src/rule/generator/: action_table.rs  dag.rs  first.rs  generator.rs  mod.rs
