[package]
name = "testlang"
version = "0.1.0"
authors = ["AcrylicShrimp <led789zxpp@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.1"
num_cpus = "1.11.0"
scoped_threadpool = "0.1.9"
strum = "0.16.0"
strum_macros = "0.16.0"
either = "1.5.3"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }
serde = "1.0.104"
serde_json = "1.0.45"
